# book-rest-api

./: Cargo.toml
bookstore/: IDENTITY  OPTIONS-000007
src/: db.rs  errors.rs  main.rs  models.rs
src/db/: database.rs  pizza_data_trait.rs
src/errors/: book_errors.rs
src/models/: book.rs
